# bltz

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  config.example.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
src/: command.rs  config.rs  constants.rs  credentials.rs  main.rs  notification.rs  oauth2.rs
src/account/: handle.rs  manager.rs  mod.rs
src/actor/: mod.rs  retry.rs
src/ai/: actor.rs  client.rs  mod.rs  prompts.rs
src/app/: event_loop.rs  mod.rs  render_thread.rs  state.rs  undo.rs
src/app/actions/: ai.rs  attachment.rs  command.rs  compose.rs  contacts.rs  email.rs  input.rs  mod.rs  navigation.rs  prefetch.rs  undo.rs  wizard.rs
src/app/handlers/: imap.rs  mod.rs
src/cache/: db.rs  mod.rs  schema.rs  sync.rs
src/cache/db/: attachment.rs  body.rs  email.rs  mod.rs  schema.rs  search.rs
src/contacts/: db.rs  mod.rs
src/input/: handler.rs  keybindings.rs  mod.rs
src/mail/: imap.rs  mod.rs  parser.rs  smtp.rs  thread.rs  types.rs
src/mail/imap/: actor.rs  client.rs  mod.rs  monitor.rs  parallel_sync.rs  pool.rs
src/ui/: add_account.rs  app.rs  composer.rs  contacts.rs  inbox.rs  mod.rs  reader.rs  status_bar.rs  theme.rs  widgets.rs
src/ui/components/: email_headers.rs  mod.rs  popup.rs  quotes.rs
src/ui/inbox/: format.rs  mod.rs  popups.rs  thread.rs
